<resources>
    <string name="app_name">lpzmrc-test-djungle</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_log_in_short">Log-In</string>
    <string name="action_log_out">Log Out</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_failed">"Logout failed"</string>
    <string name="cd_gallery">Image list tab: load an image list in JSON format from the URL https://jsonplaceholder.typicode.com/photos and show their thumbnail in a grid layout</string>
    <string name="title_gallery">Gallery</string>
    <string name="cd_todos">Todo list tab: load a todo list in JSON format from the URL https://jsonplaceholder.typicode.com/todos and show it in a list with the info provided.</string>
    <string name="title_todos">To Dos</string>
    <string name="cd_settings">Settings tab: just place some user info and a logout button. Tapping the button will \"logout\" from the app.</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Log-In</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="to_do_empty_list_message">No To Dos Found</string>
    <string name="gallery_empty_list_message">No Photos Found</string>
    <string name="gallery_loading_message">Loading</string>
    <string name="to_do_loading_message">Loading</string>
</resources>
